# cormat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: glad.c.E59A125B6AC85C14.idx  glad.h.9C6C5E15684C720A.idx  glfw3.h.DEAB56883EFCDBE9.idx  glfwWindow.cpp.CD80FBB744E18D42.idx  glfwWindow.hpp.02ADE7BE2CE72058.idx  main.cpp.A189D54729286FD8.idx  shader.cpp.9F2D740F6CC8E3A9.idx  shader.hpp.3A9DDBC4F73B80B2.idx
cmake/: libraries.cmake
data/verticeData/: vertices.hpp
include/: glad.h  glfw3.h  glfwCamera.hpp  glfwWindow.hpp  graph.hpp  render.hpp  shader.hpp  texture.hpp
lib/: CMakeLists.txt
lib/glad/: glad.c
shader/: basic.vert.glsl  floorGrid.frag  graph.frag.glsl  graph.vert.glsl
src/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  collision.cpp  collision.hpp  cormat.cpp  glad.c  glfwCamera.cpp  glfwCamera.hpp  glfwWindow.cpp  glfwWindow.hpp  graph.cpp  graph.hpp  imgui.cpp  imgui.hpp  imgui.ini  main.cpp  objects.cpp  objects.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  shapes.cpp  texture.cpp  texture.hpp  verticeHandler.cpp  verticeHandler.hpp
src/entities/: buffer.cpp  buffer.hpp  collisionBox.cpp  collisionBox.hpp  entity.cpp  entity.hpp  objects.cpp  objects.hpp  rectangle.cpp  rectangle.hpp  sphere.cpp  sphere.hpp
